fix: [onlinegame] Fix bug in onlinegame  (#8)
* Fix bug in ordering clans in OnlineGameService
* Add benchmark tests using JMH
* Fix ordering of accounts in TransactionService
* Add more test scenarios